tests/language_modules/02_import/invalid_syntax/missing_import_name.vf
module App.Main

import

procedure main()
is
    check true
end main

end App.Main